--- a/public/404.html
+++ b/public/404.html
@@ -5,6 +5,7 @@
     <title>Redirecionando...</title>
     <script type="text/javascript">
       var pathSegmentsToKeep = 1;
+
       var l = window.location;
       l.replace(
         l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
@@ -16,5 +17,6 @@
     </script>
   </head>
   <body>
+    Redirecionando...
   </body>
 </html> 
