--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/g-icon.svg" />
+    <link rel="icon" type="image/svg+xml" href="./g-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Portfólio de Gerson - Desenvolvedor Full Stack e Coordenador de Telemetria" />
     <meta name="theme-color" content="#7C3AED" />
@@ -26,6 +26,6 @@
   </head>
   <body class="bg-black">
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="./src/main.jsx"></script>
   </body>
 </html>
